[package]
name = "in_mem_fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.14.0"
clap = { version = "4.5.2", features = ["derive", "cargo"] }
libc = "0.2.153"
env_logger = "0.11.3"
log = "0.4.21"
bytebuffer = "2.2.0"
